Fix grid-2 to be responsive on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ body {
 }
 
 .grid-2 {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 400px), 1fr));
 }
 
 .grid-3 {
